0.0.3
Adjusted size of icons in toobar in gtk3.
Beat gtk's iconview into submission! DandD now works as properly.
Now detects disk physically removed from system ( eg sd cards ).
Now detects blank cd/dvd inserted/ejected, in multiple cd drives.
Now dvd/cdrom only shown when media inserted.
Fixed wrong sized icons in menus and toolbar for certain themes in gtk3 version.
Added icons to disk list and bm list.
Added 'New Bookmark' to iconview context menu.
Added bookmarks pane, uses ~/.KKFileManager/bookmarks list of paths to folders.
Fixed disks being mounted/unmounted outside of app being missed.
Buffered loading of folders with large contents.
Made single instance app.
Added 'Extract' to context menu.
Added duplicate menu item to pop up.
Disks inserted/removed  now auto detected.
Disk list include/exclude now sed type regex eg include list:
.*\(sd.[1-9]*[0-9]$\|dvd\)
Exclude list:
\(sda[123456]$\|sda13\)

Prefs now change immediately.
Unmounted disks show mountpoint as "..."
Saves size of left pane on exit.
Save window position/size on exit.
Started menu bar.
Started prefs.
Shows and mounts disk according to diskIncludePattern and diskExcludePattern ( to be set in prefs when done ).
Added left pane for disks.
Closing last tab reopens tab at ~.
Added close button to tab.
Tab label is now set to folder name.
'New' now opens new tab in same directory as active tab.

0.0.2
Added 'Delete' code to context menu.
Folder monitoring now works properly.
Started dand.
Launch file from location bar now works.
Location bar auto complete traps 'TAB' key to complete, 'RETURN' to go.
Now chaches some common mimetypes on startup.
Added new file/folder context menu.
Made gtk3 compatable.
Added better folder change monitoring.
Code clean.
Added multiple tabs.
Added folder montitor changes.
Added symlink and broken link emblems to icons.
Home, Up buttons now fill in location bar as well.
Entering non-existant folder path in location bar now does nothing.