@@ -1,4 +1,5 @@
 0.0.3
+Added workaround for gtk2 iconview bug ignoring double click on item after dand.
 Adjusted size of icons in toobar in gtk3.
 Beat gtk's iconview into submission! DandD now works as properly.
 Now detects disk physically removed from system ( eg sd cards ).
